[package]
name        = "jadis"
version     = "0.1.0"
authors     = ["Andrew Binstock (@platypusguy)"]
description = "A javap-style classfile disassembler with expanded data display"
homepage    = "https://github.com/platypusguy/jadis"
license     = "MPL-2.0"
edition     = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
